--- a/Bootcamp Datascience.ipynb
+++ b/Bootcamp Datascience.ipynb
@@ -334,7 +334,9 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -366,7 +368,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "### Desafio 01:"
+    "### Desafio 01: Escolher um título mais descritivo, que passe a mensagem adequada ao gráfico de barras."
    ]
   },
   {
