--- a/Bootcamp Datascience.ipynb
+++ b/Bootcamp Datascience.ipynb
@@ -5184,7 +5184,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Conclusão: Ao comparar em gráficos os casos de dengue em alguns estados com relação aos gastos da saúde, verifiquei que não existe correlão dos picos no gastos com aumento de casos de dengue nesses estados."
+    "### Conclusão: Ao comparar em gráficos os casos de dengue em alguns estados com relação aos gastos da saúde, verificamos que não existe correlão dos picos no gastos com aumento de casos de dengue nesses estados."
    ]
   },
   {
